# Frappe_Estate_app

./: README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
estate_app/: api.py  doc_events.py  hooks.py  jinja.py  populate_agents.py  populate_cities.py  populate_properties.py  route.py  tasks.py  utils.py
estate_app/config/: desktop.py
estate_app/dashboard/: indent_dashboard.json
estate_app/estate_app/doctype/agency_master/: agency_master.js  agency_master.json  agency_master.py  test_agency_master.py
estate_app/estate_app/doctype/agent/: agent.js  agent.json  agent.py  test_agent.py
estate_app/estate_app/doctype/city/: city.js  city.json  city.py  test_city.py
estate_app/estate_app/doctype/orders/: orders.js  (+3 more)
estate_app/public/css/: dashboard.css  style.css
estate_app/public/img/: headerImg.jpg:Zone.Identifier
estate_app/public/js/: dashboard.js  desk.js  jc-agency-master.js
estate_app/templates/: estate_base.html
estate_app/templates/pages/: base.html  base1.html  new_base.html
estate_app/www/agents/: index.html  index.py
estate_app/www/create-indent/: index.html
estate_app/www/dashboard/: index.html  index.py
estate_app/www/indent-pcs-allocation-list/: index.html
estate_app/www/jc-agency-master/: index.html
estate_app/www/jc-agent-master/: index.html
estate_app/www/property/: contact.html  detail.html  detail.py  index.html  index.py  order.html  orders.py
estate_app/www/railhead-con-list/: index.html
estate_app/www/update-agency-info/: index.html
estate_app/www/update-con-details/: index.html
(+38 files in other folders)
