[project]
name = "estate_app"
authors = [
    { name = "Abhishek Jupalli(abhi)", email = "jupalliabhishek1409@gmail.com"}
]
description = "A stock app "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "bitcoin-value~=1.6.0",
    "Faker~= 36.1.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
